# OOP

lw1/: Makefile  delvowels  delvowels.cpp  functions.cpp  functions.h
lw2/: CMakeLists.txt  main.cpp  money.cpp  money.hpp  test.cpp
lw3/: CMakeLists.txt  figure.cpp  figure.hpp  main.cpp  test.cpp
lw4/: CMakeLists.txt
lw4/include/: array.h  figure.h  math.h  point.h  rect.h  rhombus.h  trapezium.h
lw4/src/: main.cpp
lw4/tmp/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main_l4  test_l4
lw5/: CMakeLists.txt  main.cpp
lw5/include/: allocator.h
lw5/src/: main.cpp
lw5/test/: main.cpp
lw5/tmp/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main_l5  test_l5
lw6/: CMakeLists.txt  main.cpp
lw6/headers/: NPC.hpp  bear.hpp  factory.hpp  observers.hpp  outlaw.hpp  visitor.hpp  werewolf.hpp
lw6/src/: NPC.cpp  bear.cpp  werewolf.cpp
lw6/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake
lw7/: CMakeLists.txt  main.cpp
lw7/headers/: NPC.hpp  bear.hpp  factory.hpp  observers.hpp  visitor.hpp  werewolf.hpp
lw7/src/: NPC.cpp  bear.cpp  outlaw.cpp  werewolf.cpp
lw7/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake
